--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>NFTs website design by Rishabh Shukla on Dribbble</title>
+    <title>NFTs website design by Rishabh Pradeep Shukla on Dribbble</title>
     <meta name="description"
         content="NFTs website design designed by Rajvardhan Singh. Connect with them on Dribbble; the global community for designers and creative professionals." />
     <meta charset="utf-8" />
